Add header main footer to style.css

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
     <!-- Title -->
     <title>Love Cycling</title>
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
