--- a/index.html
+++ b/index.html
@@ -22,21 +22,15 @@
     <!-- Header -->
     <header>
       <a href="index.html">
-        <h1 id="logo">Love cycling</h1>
-        <nav>
-          <ul>
-            <li>
-              <a href="">Home</a>
-            </li>
-            <li>
-              <a href="">Gallery</a>
-            </li>
-            <li>
-              <a href="">Sign up</a>
-            </li>
-          </ul>
-        </nav>
+        <h1 id="logo">Love Cycling</h1>
       </a>
+      <nav>
+        <ul id="menu">
+          <li><a href="" class="active">Home</a></li>
+          <li><a href="">Gallery</a></li>
+          <li><a href="">Sign Up</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!-- Main content -->
