Add background-color to social-networks

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <h1 id="logo">Love Cycling</h1>
       </a>
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label">X</label>
+      <label for="nav-toggle" class="nav-toggle-label">
+        <i class="fa-solid fa-bars"></i>
+      </label>
       <nav>
         <ul id="menu">
           <li><a href="" class="active">Home</a></li>
@@ -40,17 +42,17 @@
 
     <!-- Footer -->
     <footer>
-      <ul>
+      <ul id="social-networks">
         <li>
           <a
             href="https://www.facebook.com/"
             target="_blank"
             rel="noopener"
             aria-label="Visit our Facebook page (opens in a new tab)"
-            ><i class="fa-brands fa-facebook"></i
+          >
+            <i class="fa-brands fa-facebook"></i
           ></a>
         </li>
-
         <li>
           <a
             href="https://www.twitter.com/"
@@ -83,6 +85,7 @@
         </li>
       </ul>
     </footer>
+
     <!-- Font Awesome kit -->
     <script
       src="https://kit.fontawesome.com/3b20d96fa9.js"
