Add section id main content

--- a/gallery.html
+++ b/gallery.html
@@ -31,14 +31,16 @@
       <nav>
         <ul id="menu">
           <li><a href="" class="active">Home</a></li>
-         <li><a href="gallery.html" class="active">Gallery</a></li>
+          <li><a href="gallery.html" class="active">Gallery</a></li>
           <li><a href="">Sign Up</a></li>
         </ul>
       </nav>
     </header>
 
     <!-- Main content -->
-    <main>Main content</main>
+    <main>
+      <section id="bikers"></section>
+    </main>
 
     <!-- Footer -->
     <footer>
