--- a/signup.html
+++ b/signup.html
@@ -39,7 +39,9 @@
     </header>
 
     <!-- Main content -->
-    <main>Main content</main>
+    <main>
+      <section id="bikers"></section>
+    </main>
 
     <!-- Footer -->
     <footer>
