Add background-image to home page

--- a/gallery.html
+++ b/gallery.html
@@ -38,8 +38,15 @@
     </header>
 
     <!-- Main content -->
-    <main>
-      <section id="bikers"></section>
+    <main class="hero-gallery">
+      <section id="bikers">
+        <img
+          class="bikers"
+          src="assets/images/hero-image.jpg"
+          height="100%"
+          width="100%"
+        />
+      </section>
     </main>
 
     <!-- Footer -->
