--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    /
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    /
     <!-- Meta tags for search engines -->
     <meta
       name="Description"
@@ -18,6 +20,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
+
   <body>
     <!-- Header -->
     <header>
@@ -39,7 +42,7 @@
 
     <!-- Main content -->
     <main>
-      <section id="bikers"></section>
+      <section id="hero"></section>
     </main>
 
     <!-- Footer -->
