Add cover-text to main content

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
 
     <!-- Main content -->
     <main>
-      <section id="hero"></section>
+      <section id="hero">
+        <div id="cover-text">
+        <h2>Love cycling</h2>
+        <h3>Cycling Through Stockholm city</h3>
+      </section>
     </main>
 
     <!-- Footer -->
