Add reasons of cycling to main content

--- a/index.html
+++ b/index.html
@@ -44,8 +44,55 @@
     <main>
       <section id="hero">
         <div id="cover-text">
-        <h2>Love cycling</h2>
-        <h3>Cycling Through Stockholm city</h3>
+          <h2>Love cycling</h2>
+          <h3>Cycling Through Stockholm city</h3>
+        </div>
+      </section>
+      <section id="reasons">
+        <h2>What makes cycling with us so special?</h2>
+        <div id="benefits">
+          <div id="benefits-physical">
+            <div>
+              <h3>Feel healthy <i class="fa-solid fa-heart-pulse"></i></h3>
+              <hr />
+              <p>
+                Cycling not only enhances your cardiovascular health by boosting
+                aerobic fitness but also aids in calorie burning and muscle
+                strength development.
+              </p>
+            </div>
+            <div>
+              <h3>Feel strong <i class="fa-solid fa-dumbbell"></i></h3>
+              <hr />
+              <p>
+                Cycling enhances heart strength, promoting more efficient blood
+                circulation throughout your body.
+              </p>
+            </div>
+          </div>
+          <div id="benefits-mental">
+            <div>
+              <h3>Feel free <i class="fa-brands fa-fly"></i></h3>
+              <hr />
+              <p>
+                Cycling is recognized for its capacity to trigger the release of
+                endorphins in the brain, resulting in increased energy,
+                alertness, and an overall boost in happiness.
+              </p>
+            </div>
+            <div>
+              <h3>Get social <i class="fa-solid fa-globe"></i></h3>
+              <hr />
+              <p>
+                Biking in the company of others allows us to cover greater
+                distances and achieve higher speeds with greater ease.
+              </p>
+            </div>
+          </div>
+          <div id="benefits-image">
+            <div id="circle-cover-bg"></div>
+          </div>
+        </div>
       </section>
     </main>
 
