--- a/index.html
+++ b/index.html
@@ -94,6 +94,48 @@
           </div>
         </div>
       </section>
+
+      <!-- Meetup Times section -->
+      <section id="meetups">
+        <h2>Meet-up Times</h2>
+        <div id="times">
+          <div>
+            <h3>Urban <i class="fa-solid fa-city"></i></h3>
+            <p>Monday</p>
+            <p>5K</p>
+            <p>The Island's Park</p>
+            <p>18:30</p>
+          </div>
+          <div>
+            <h3>Routes <i class="fa-solid fa-tree"></i></h3>
+            <p>Wednesday</p>
+            <p>10K</p>
+            <p>Central Stockholm City</p>
+            <p>18:o0</p>
+          </div>
+          <div>
+            <h3>Urban <i class="fa-solid fa-city"></i></h3>
+            <p>Friday</p>
+            <p>5K</p>
+            <p>The Island's Park</p>
+            <p>18:00</p>
+          </div>
+          <div>
+            <h3>Routes <i class="fa-solid fa-tree"></i></h3>
+            <p>Saturday</p>
+            <p>10K</p>
+            <p>Central Stockholm City</p>
+            <p>08:30</p>
+          </div>
+          <div>
+            <h3>Coffee <i class="fa-solid fa-mug-hot"></i></h3>
+            <p>Sunday</p>
+            <p>0K</p>
+            <p>The Island's Park</p>
+            <p>10:30</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- Footer -->
