change routes icon in meatup section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <p>18:00</p>
           </div>
           <div>
-            <h3>Routes <i class="fa-solid fa-tree"></i></h3>
+            <h3>Routes <i class="fa-solid fa-route"></i></h3>
             <p>Wednesday</p>
             <p>10K</p>
             <p>Central Stockholm City</p>
@@ -121,7 +121,7 @@
             <p>18:00</p>
           </div>
           <div>
-            <h3>Routes <i class="fa-solid fa-tree"></i></h3>
+            <h3>Routes <i class="fa-solid fa-route"></i></h3>
             <p>Saturday</p>
             <p>10K</p>
             <p>Central Stockholm City</p>
