change health icon in main content

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="benefits">
           <div id="benefits-physical">
             <div>
-              <h3>Feel healthy <i class="fa-solid fa-heart-pulse"></i></h3>
+              <h3>Feel healthy <i class="fa-solid fa-briefcase-medical"></i></i></h3>
               <hr />
               <p>
                 Cycling not only enhances your cardiovascular health by boosting
@@ -100,7 +100,7 @@
         <h2>Meet-up Times</h2>
         <div id="times">
           <div>
-            <h3>Urban <i class="fa-solid fa-city"></i></h3>
+            <h3>Urban <i class="fa-solid fa-tree-city"></i></h3>
             <p>Monday</p>
             <p>5K</p>
             <p>The Island's Park</p>
@@ -114,7 +114,7 @@
             <p>08:30</p>
           </div>
           <div>
-            <h3>Urban <i class="fa-solid fa-city"></i></h3>
+            <h3>Urban <i class="fa-solid fa-tree-city"></i></h3>
             <p>Friday</p>
             <p>5K</p>
             <p>The Island's Park</p>
