Add gallery image in main content

--- a/gallery.html
+++ b/gallery.html
@@ -38,14 +38,14 @@
     </header>
 
     <!-- Main content -->
-    <main class="hero-gallery">
-      <section id="bikers">
-        <img
-          class="bikers"
-          src="assets/images/hero-image.jpg"
-          height="100%"
-          width="100%"
-        />
+    <main>
+      <section id="gallery">
+        <div id="photos">
+          <img
+            src="assets/images/cyclist-image.jpg"
+            alt="woman on her amaizing bike"
+          />
+        </div>
       </section>
     </main>
 
