--- a/gallery.html
+++ b/gallery.html
@@ -45,6 +45,21 @@
             src="assets/images/cyclist-image.jpg"
             alt="woman on her amaizing bike"
           />
+          <img src="assets/images/cyclists-image.jpg" alt="group of cyclists" />
+          <img src="assets/images/men-image.jpg" alt="group of men cycling" />
+          <img
+            src="assets/images/road-image.jpg"
+            alt="group of men cycling on road"
+          />
+          <img src="assets/images/happy-image.jpg" alt="man on his bike" />
+          <img
+            src="assets/images/focus-image.jpg"
+            alt="focus biker on the road"
+          />
+          <img
+            src="assets/images/group-image.jpg"
+            alt="men on fighting for first position"
+          />
         </div>
       </section>
     </main>
