gallery columns inscrease on large screens

--- a/gallery.html
+++ b/gallery.html
@@ -42,8 +42,8 @@
       <section id="gallery">
         <div id="photos">
           <img
-            src="assets/images/cyclist-image.jpg"
-            alt="woman on her amaizing bike"
+            src="assets/images/water-image.jpg"
+            alt="men resting and taking some water"
           />
           <img src="assets/images/cyclists-image.jpg" alt="group of cyclists" />
           <img src="assets/images/men-image.jpg" alt="group of men cycling" />
@@ -51,7 +51,7 @@
             src="assets/images/road-image.jpg"
             alt="group of men cycling on road"
           />
-          <img src="assets/images/happy-image.jpg" alt="man on his bike" />
+          <img src="assets/images/all-image.jpg" alt="all cyclists togather" />
           <img
             src="assets/images/focus-image.jpg"
             alt="focus biker on the road"
@@ -60,6 +60,11 @@
             src="assets/images/group-image.jpg"
             alt="men on fighting for first position"
           />
+          <img
+            src="assets/images/blue-image.jpg"
+            alt="about to get to fish line"
+          />
+          <img src="assets/images/old-image.jpg" alt="old man on his bike" />
         </div>
       </section>
     </main>
