--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    /
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    /
-    <!-- Meta tags for search engines -->
+     <!-- Meta tags for search engines -->
     <meta
-      name="Description"
+      name="description"
       content="Love Cycling. Club for cyclists in Stockholm, Sweden. City cycling, Explore the beauty of Stockholm"
     />
     <meta
@@ -18,7 +16,7 @@
     <!-- Title -->
     <title>Love Cycling</title>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
 
   <body>
@@ -27,17 +25,17 @@
       <a href="index.html">
         <h1 id="logo">Love Cycling</h1>
       </a>
-      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <input type="checkbox" id="nav-toggle" name="nav-toggle">
       <label for="nav-toggle" class="nav-toggle-label">
         <i class="fa-solid fa-bars"></i>
       </label>
       <nav>
         <ul id="menu">
-          <li><a href="" class="active">Home</a></li>
-          <li><a href="gallery.html" class="active">Gallery</a></li>
-          <li><a href="signup.html" class="active">Sign Up</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="signup.html">Sign Up</a></li>
         </ul>
-      </nav>
+        </nav>
     </header>
 
     <!-- Main content -->
