--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Meta tags for search engines -->
     <meta
-      name="Description"
+      name="description"
       content="Love Cycling. Club for cyclists in Stockholm, Sweden. City cycling, Explore the beauty of Stockholm"
     />
     <meta
@@ -30,9 +30,9 @@
       </label>
       <nav>
         <ul id="menu">
-          <li><a href="" class="active">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="gallery.html" class="active">Gallery</a></li>
-          <li><a href="">Sign Up</a></li>
+          <li><a href="signup.html">Sign Up</a></li>
         </ul>
       </nav>
     </header>
