correted color order in footer

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id="benefits">
           <div id="benefits-physical">
             <div>
-              <h3>Feel healthy <i class="fa-solid fa-briefcase-medical"></i></i></h3>
+              <h3>Feel healthy <i class="fa-solid fa-briefcase-medical"></i></h3>
               <hr />
               <p>
                 Cycling not only enhances your cardiovascular health by boosting
